crates/solidity/testing/snapshots/bindings_output/control/try_stmt/generated/0.5.0-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword or WhileKeyword.
    ╭─[input.sol:9:9]
    │
  9 │ ╭─▶         try feed.getData(token) returns (uint v) {
    ┆ ┆   
 20 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ interface DataFeed { function getData(address token) external returns (uint value); }
   │           ────┬───            ───┬───         ──┬──                         ──┬──  
   │               ╰──────────────────────────────────────────────────────────────────── name: 1
   │                                  │              │                             │    
   │                                  ╰───────────────────────────────────────────────── name: 2
   │                                                 │                             │    
   │                                                 ╰────────────────────────────────── name: 3
   │                                                                               │    
   │                                                                               ╰──── name: 4
   │ 
 3 │ contract FeedConsumer {
   │          ──────┬─────  
   │                ╰─────── name: 5
 4 │     DataFeed feed;
   │     ────┬─── ──┬─  
   │         ╰────────── ref: 1
   │                │   
   │                ╰─── name: 6
 5 │     uint errorCount;
   │          ─────┬────  
   │               ╰────── name: 7
 6 │     uint lastValue;
   │          ────┬────  
   │              ╰────── name: 8
 7 │     function rate(address token) public returns (uint value, bool success) {
   │              ──┬─         ──┬──                       ──┬──       ───┬───  
   │                ╰─────────────────────────────────────────────────────────── name: 9
   │                             │                           │            │     
   │                             ╰────────────────────────────────────────────── name: 10
   │                                                         │            │     
   │                                                         ╰────────────────── name: 11
   │                                                                      │     
   │                                                                      ╰───── name: 12
 8 │         string memory last_reason;
   │                       ─────┬─────  
   │                            ╰─────── name: 13
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ │     interface DataFeed { function getData(address token) external returns (uint value); }
    │ │     ───────────────────────────────────────────┬┬──────┬────────────────────────┬─────────  
    │ │                                                ╰──────────────────────────────────────────── definiens: 1
    │ │                                                 │      │                        │           
    │ │                                                 ╰─────────────────────────────────────────── definiens: 3
    │ │                                                        │                        │           
    │ │                                                        ╰──────────────────────────────────── definiens: 2
    │ │                                                                                 │           
    │ │                                                                                 ╰─────────── definiens: 4
  2 │ ╭───▶ 
    ┆ ┆     
  4 │ │         DataFeed feed;
    │ │     ─────────┬─────────  
    │ │              ╰─────────── definiens: 6
  5 │ │         uint errorCount;
    │ │     ──────────┬──────────  
    │ │               ╰──────────── definiens: 7
  6 │ │ │       uint lastValue;
    │ │ │   ──────────┬─────────  
    │ │ │             ╰─────────── definiens: 8
  7 │ │ ╭─▶     function rate(address token) public returns (uint value, bool success) {
    │ │ │                     ──────┬──────                  ─────┬──── ──────┬──────  
    │ │ │                           ╰────────────────────────────────────────────────── definiens: 10
    │ │ │                                                         │           │        
    │ │ │                                                         ╰──────────────────── definiens: 11
    │ │ │                                                                     │        
    │ │ │                                                                     ╰──────── definiens: 12
  8 │ │ │           string memory last_reason;
    │ │ │   ─────────────────┬─────────────────  
    │ │ │                    ╰─────────────────── definiens: 13
    ┆ ┆ ┆   
 20 │ │ ├─▶     }
    │ │ │           
    │ │ ╰─────────── definiens: 9
 21 │ ├───▶ }
    │ │         
    │ ╰───────── definiens: 5
────╯
